# unihub

./: .gitignore  AGENT.md  App.tsx  README.md  constants.tsx  index.html  index.tsx  metadata.json  package.json  types.ts  unihub_planning.md  vite.config.ts
components/: AISearch.tsx  CategorySidebar.tsx  Footer.tsx  Navbar.tsx  ResourceCard.tsx  ResourceList.tsx  UploadForm.tsx
contexts/: LanguageContext.tsx
data/: mockResources.ts
locales/: index.ts
services/: apiService.ts  geminiService.ts
unihub_backend/: README.md  db.sqlite3  pyproject.toml
unihub_backend/resources/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
unihub_backend/resources/migrations/: 0001_initial.py  0002_resource_attachment.py  0003_comment.py  0003_rating.py
unihub_backend/unihub_project/: asgi.py  settings.py  urls.py  wsgi.py
unihub_backend/users/: serializers.py  tests.py  urls.py  views.py
